# mhd-pos-tagging-benchmark

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  CLI-ADAPTER-PLAN.md  CODE-REVIEW.md  CORA-XML-FORMAT.md  HITS-TAGSET.md  IMPLEMENTATION-PLAN.md  JOURNAL.md  MHDBDB-TAGSET.md  MODEL-ADAPTER-GUIDE.md  OVERLAP-TABLE.md  REQUIREMENTS.md  RESEARCH.md  TAGSET-MAPPING.md  journal.md
docs/guides/: GETTING-STARTED.md  MODEL-ADAPTER-GUIDE.md  TROUBLESHOOTING.md
src/mhd_pos_benchmark/: __init__.py  cli.py  doctor.py
src/mhd_pos_benchmark/adapters/: base.py  cache.py  cached.py  claude_cli.py  cli_base.py  cli_presets.py  gemini.py  generic_api.py  generic_cli.py  gold_passthrough.py  majority_class.py  prompt_template.py
src/mhd_pos_benchmark/data/: corpus.py  rem_parser.py  subset.py
src/mhd_pos_benchmark/evaluation/: comparator.py  metrics.py  report.py
src/mhd_pos_benchmark/mapping/: hits_to_mhdbdb.yaml  tagset_mapper.py
tests/: conftest.py  test_cached_adapter.py  test_cli.py  test_cli_adapters.py  test_comparator.py  test_doctor.py  test_gemini_adapter.py  test_generic_api.py  test_generic_cli.py  test_metrics.py  test_prompt_template.py  test_rem_parser.py  test_report.py  test_subset.py  test_tagset_mapper.py
tests/fixtures/: sample_cora.xml
